fixed poppity and added spacing feature

--- a/client/src/components/modal/modal.styles.scss
+++ b/client/src/components/modal/modal.styles.scss
@@ -66,31 +66,16 @@
 
   .modal-backdrop {
     z-index: 5;
-
     position: fixed;
     width: 100%;
     height: 100%;
     background-color: rgba(black, 0.5);
-
-    // background: $lg_pink_purple;
-
-    &:hover {
-      // background-color: red;
-    }
   }
 
   .modal-content {
     position: absolute;
-    // top: 0;
-    // left: 0;
-
-    // transform: translate(-50%, 50%);
-
     background-color: $foreground;
     z-index: 10;
-
-    // width: 35em;
-    // padding: 3em;
     border-radius: 5px;
   }
 }
