--- a/client/src/components/sidebar/sidebar.styles.scss
+++ b/client/src/components/sidebar/sidebar.styles.scss
@@ -2,6 +2,8 @@
 @import "../../assets/dimensions";
 
 .main-sidebar-container {
+  // box-sizing: border-box;
+
   position: relative;
   overflow: hidden;
 
@@ -9,9 +11,10 @@
   // z-index: 800;
 
   .sidebar-nav {
+    box-sizing: border-box;
     z-index: 3;
-    overflow-x: scroll;
-    overflow-y: auto;
+    // overflow-x: scroll;
+    // overflow-y: auto;
     position: relative;
 
     min-width: $sidebar_nav_width;
@@ -106,7 +109,7 @@
     }
 
     .room-list-nav-z {
-      z-index: 500;
+      z-index: 40;
     }
   }
 
@@ -120,7 +123,6 @@
     overflow-x: hidden;
     overflow-y: auto;
     background-color: $foreground;
-    z-index: 10;
     position: relative;
 
     min-width: 20rem;
